# Exo

./: .bot_config.json  .dockerignore  .replit  Dockerfile  INTEGRATION_CHAT_HTML.html  Procfile  SPEC.md  admin_routes.py  ai_config.json  ai_config.py  ai_functions.py  ai_utils.py  app.py  app_recover_message.py  app_temp.py  assistant.py  audio_handler.py  audio_utils.py  auth_utils.py  backup.sql  bot_service.py  chat_services.py  conversation_utils.py  deploy.py  deployment_entry.py  diagnostic_db.py  main.py  mathpix_utils.py  memory_consolidator.py  migrate_all_users.py  migrate_test_users.py  models.py  new_settings_section.html  payment_routes.py  pyproject.toml  reminder_system.py  replit.nix  requirements.txt  requirements_audio.txt  socket_handlers.py  (+9 more)
attached_assets/: Pasted--File-app-js-import-OpenAI-from-openai-class-AssistantChat-constructor-apiKey--1739346113294.txt  Pasted--l-ments-essentiels-pour-l-API-WhatsApp-Variables-d-environnement-requises-WHATSAPP-PH-1740883830395.txt  Pasted--socketio-on-send-message-def-handle-message-data-try-Get-current-conversatio-1742100374847.txt  Pasted-1-Install-the-required-dependencies-first-bash-pip-install-openai-python-dotenv-flask-socketio--1739467430551.txt  Pasted-160-120-141-248-10-81-2-2-172-31-128-47-17-Mar-2025-02-25-02-POST-socket-io-EIO-4-transport-1742178389240.txt  Pasted-2025-03-23-23-54-56-73-d28b95ab-System-forwarding-local-port-5000-to-external-port-80-2025-03-23-1742774252168.txt  Pasted-2025-03-24-00-12-37-90-7831651b-System-forwarding-local-port-5000-to-external-port-80-2025-03-24-1742775253857.txt  (+42 more)
(+81 files in other folders)
