[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-socketio>=5.5.1",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai[datalib]>=1.62.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "twilio>=9.4.5",
    "eventlet>=0.39.0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "APScheduler>=3.11.0",
    "trafilatura>=2.0.0",
    "sqlalchemy>=2.0.38",
    "werkzeug>=3.1.3",
    "python-telegram-bot>=21.10",
    "telegram>=0.0.1",
    "aiohttp>=3.11.12",
    "requests>=2.32.3",
    "flask-login>=0.6.3",
    "flask-wtf>=1.2.2",
    "typing-extensions>=4.12.2",
    "flask-migrate>=4.1.0",
]
